[package]
name = "stremio-addon-blitz"
version = "0.1.0"
authors = ["Ivo Georgiev <ivo@strem.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
rocket = "0.4.x"
reqwest = "0.9.x"
select = "0.4.x"
stremio-state-ng = { git = "https://github.com/stremio/stremio-state-ng" }
rocket_contrib = "*"

[build-dependencies]
stremio-state-ng = { git = "https://github.com/stremio/stremio-state-ng" }
serde_json = "1.x.x"
